(lang dune 3.7)

(name tanenbaum)
(version 0.1.0)

(generate_opam_files true)

(source
 (github sixstring982/tanenbaum))

(authors "Sixstring982")

(maintainers "Sixstring982")

(license BSD-3-Clause)

(documentation https://sixstring982.github.io/tanenbaum)

(package
 (name tanenbaum)
 (synopsis "OCaml Advent of Code starter project")
 (depends
  ocaml
  reason
  re
  dune
  containers
  containers-data
  iter
  stringext
  (cmdliner (>= 1.2.0))
  (piaf (>= 0.2.0))
  (fmt (>= 0.9.0))
  lp
  lp-glpk
  qcheck)
 (tags ("advent-of-code")))
